# Automated-Spreadsheet-Curation

./: .gitignore  README.md  config.default.json  config.example.json  demo.xlsx  detectors.py  environment.yml  fair.py  fairdata_eg.py  paper.bib  paper.md  playground.ipynb  pyproject.toml  results2025-04-29_09-44-31.csv  results2025-04-29_09-44-31.json  results2025-12-22_10-40-04.csv  results2025-12-22_10-40-04.json  test.py
results/: 4723768_train__2026-02-02_08-46-06.csv  5336148_example-module__2026-02-02_08-51-06.csv  5571723_Profiles_fromICES_ToCalculateAreaExtent__2026-02-02_09-00-18.csv  5722948_Tree_stand_data__2026-02-02_10-04-48.csv  Final_dataset_RFIs_2026-02-02_08-35-15.csv  Project-3740971_2026-02-02_08-18-18.csv
