[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FAIRspreadsheets"
version = "0.0.1"
description = "A suite of tests for inspection of tabular data ."
authors = [
    {name = "Ellery Galvin", email = "ellery.galvin@colorado.edu"},
    {name = "Center for Research Data and Digital Scholar at the University of Colorado Boulder", email = "crdds@colorado.edu"},
    {name = "Alexandra Alisa Provo", email = "alexandra.provo@nyu.edu"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["data", "curation", "validation", "FAIR"]
dependencies = [
    "pandas >= 1.5.0",
    "numpy >= 1.23.0",
    "openpyxl >= 3.0.7",
]
license-files = ["LICENSE.txt"]

[tool.flit.module]
name = "fair"

[project.urls]
Source = "https://github.com/CU-Boulder-CRDDS/Automated-Spreadsheet-Curation"
